Funcionando conversão de euro e dolar para real

--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <title>Conversor de moeda</title>
 </head>
 <body>
-
     
+  <header>
+      <h1>Conversor de Dolar e Euro para o Real</h1>
+  </header>
+  <section class="container">
+    <div class="resultado"><h2>R$ 0.00</h2></div>
 
+    <div class="inputs">
+        <input id="dolar" type="number" name="dolar" placeholder="Digite valor em Dolar">
+        <input id="euro" style="display: none;" type="number" name="euro" placeholder="Digite valor em Euro">
+        <select>
+            <option>Dolar</option>
+            <option>Euro</option>
+        </select>
+
+    </div>
+
+  </section>
 
 
 <script src="js/script.js"></script>
